<resources>
    <string name="app_name">GithubTraining</string>
    <string name="action_logout">Log out</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="error_no_internet">No Internet Connection!!!</string>
    <string name="received_error_no_internet">Unable to resolve host "api.github.com": No address associated with
        hostname
    </string>
    <string name="bio">Bio</string>
    <string name="location">Location</string>
    <string name="created">Created</string>
    <string name="email">Email</string>
    <string name="updated">Updated</string>
    <string name="public_repo">PublicRepo</string>
    <string name="private_repo">PrivateRepo</string>
    <string name="view_repository">View Repository</string>
    <string name="contact_by_email">Contact by email</string>
    <string name="title_activity_repositories">RepositoriesActivity</string>

    //Intent string
    <string name="intent_repo">UserName</string>
    <string name="idRepo">idRepo</string>


    <string name="settings">SETTINGS</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="affiliation">Affiliation</string>
    <string name="affiliation_text">Affiliation optin for fetching repositories</string>
    <string name="sort">Sort</string>
    <string name="sort_text">Sort criteria dor repositories</string>
    <string name="title_activity_repo_details">RepoDetails</string>
    <string name="status_repository">Status Repository</string>
    <string name="name_repository">Info about repository</string>
    <string name="details_repository">Details Repository</string>
    <string name="pushed">Pushed</string>
    <string name="full_name">Full Name</string>
    <string name="cancel">Cancel</string>
    <string name="no_description">No description</string>
    <string name="owner">Owner</string>
    <string name="collaborator">Collaborator</string>
    <string name="organization_member">Organization Member</string>
    <string name="ok">OK</string>

    <string name="sharedPrefToken">token</string>
    <string name="sharedPrefNoToken">no token</string>

    <string name="loading">Loading...</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>Details of Repositories</h3>]]></string>
    <string name="name_repo"><![CDATA[<b>Name: </b>]]></string>
    <string name="full_name_repo"><![CDATA[<b>Full Name: </b>]]></string>
    <string name="created_repo"><![CDATA[<b>Created at: </b>]]></string>
    <string name="updated_repo"><![CDATA[<b>Updated at: </b>]]></string>
    <string name="pushed_repo"><![CDATA[<b>Pushed at: </b>]]></string>
    <string name="description_repo"><![CDATA[<b>Description: </b>]]></string>
    <string name="is_private_repo"><![CDATA[<b>Is Private: </b>]]></string>




</resources>
