<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>
    <TextView
            android:id="@+id/nSortHeader"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:text="@string/sort"
            android:padding="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"/>

    <RadioGroup
            android:id="@+id/nRadioGroup"
            android:layout_marginLeft="7dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nSortHeader"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

        <RadioButton
                android:id="@+id/nCreated"
                android:text="@string/created"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <RadioButton
                android:id="@+id/nUpdated"
                android:text="@string/updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <RadioButton
                android:id="@+id/nPushed"
                android:text="@string/pushed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <RadioButton
                android:id="@+id/nFullName"
                android:text="@string/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

    </RadioGroup>

    <TextView
            android:id="@+id/nCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@+id/nRadioGroup"
            android:layout_marginTop="15sp"
            android:padding="20sp"
            android:textColor="#C74545"
            app:layout_constraintRight_toRightOf="parent"
            tools:ignore="MissingConstraints"/>

</android.support.constraint.ConstraintLayout>