<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_settings"
        tools:context=".screen.settings.SettingsActivity">


    <android.support.constraint.ConstraintLayout
            android:id="@+id/nContainerAffiliation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">


        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/nDevider"
                android:padding="10dp">

            <TextView
                    android:id="@+id/nAffiliationHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/affiliation"
                    android:textColor="@color/black"/>
            <TextView
                    android:id="@+id/nAffiliationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/nAffiliationHeader"
                    android:text="@string/affiliation_text"
                    android:layout_marginBottom="10dp"/>

        </android.support.constraint.ConstraintLayout>


        <View

                android:id="@+id/nDevider"
                android:background="@color/grey"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="1dp"/>
    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
            android:id="@+id/nContainerSort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
    app:layout_constraintTop_toBottomOf="@id/nContainerAffiliation">


        <android.support.constraint.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/nDevider2"
                android:padding="10dp">

            <TextView
                    android:id="@+id/nSortHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort"
                    android:textColor="@color/black"/>
            <TextView
                    android:id="@+id/nSortText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/nSortHeader"
                    android:text="@string/sort_text"
                    android:layout_marginBottom="10dp"/>

        </android.support.constraint.ConstraintLayout>


        <View

                android:id="@+id/nDevider2"
                android:background="@color/grey"
                android:layout_width="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_height="1dp"/>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>